--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -1,37 +1,41 @@
-from casual.make.api import *
+import casual.make.api as make
+import casual.middleware.make.api as dsl
 
-IncludePaths([
+make.IncludePaths([
    'include',
    '../common/include',
    '../xatmi/include',
-   '../serviceframework/include'] + 
-   casual_make_optional_include_paths().split())
+   '../serviceframework/include']
+    + make.optional_include_paths()
+    + dsl.paths().include.gtest
+    )
 
 
-LibraryPaths([
+make.LibraryPaths([
     'bin',
     '../common/bin',
     '../serviceframework/bin',
-    '../xatmi/bin'] + 
-    casual_make_optional_library_paths().split()
+    '../xatmi/bin']
+    + make.optional_library_paths()
+    + dsl.paths().library.gtest
    )
 
 install_libs = []
 
 
-lib_configuration = LinkLibrary( 'bin/casual-configuration',
+lib_configuration = make.LinkLibrary( 'bin/casual-configuration',
     [
-        Compile( 'source/common.cpp'),
-        Compile( 'source/user.cpp'),
-        Compile( 'source/user/load.cpp'),
-        Compile( 'source/user/environment.cpp'),
-        Compile( 'source/model/transform.cpp'),
-        Compile( 'source/model/load.cpp'),
+        make.Compile( 'source/common.cpp'),
+        make.Compile( 'source/user.cpp'),
+        make.Compile( 'source/user/load.cpp'),
+        make.Compile( 'source/user/environment.cpp'),
+        make.Compile( 'source/model/transform.cpp'),
+        make.Compile( 'source/model/load.cpp'),
         
-        Compile( 'source/build/server.cpp'),
-        Compile( 'source/build/executable.cpp'),
+        make.Compile( 'source/build/server.cpp'),
+        make.Compile( 'source/build/executable.cpp'),
         
-        Compile( 'source/resource/property.cpp'),
+        make.Compile( 'source/resource/property.cpp'),
     ],
     ['casual-common',
     'casual-serviceframework'])
@@ -40,9 +44,9 @@ lib_configuration = LinkLibrary( 'bin/casual-configuration',
 install_libs.append( lib_configuration)
 
 
-target = LinkLibrary( 'bin/casual-configuration-cli',
+target = make.LinkLibrary( 'bin/casual-configuration-cli',
    [
-      Compile( 'source/admin/cli.cpp'),
+      make.Compile( 'source/admin/cli.cpp'),
    ],
    [
       lib_configuration,
@@ -52,24 +56,24 @@ target = LinkLibrary( 'bin/casual-configuration-cli',
 install_libs.append( target)
 
 
-example_archive = LinkArchive( 'bin/casual-configuration-example', 
+example_archive = make.LinkArchive( 'bin/casual-configuration-example', 
      [
-         Compile( 'source/example/domain.cpp'),
-         Compile( 'source/example/resource/property.cpp'),
-         Compile( 'source/example/build/server.cpp'),
-         Compile( 'source/example/build/executable.cpp'),
+         make.Compile( 'source/example/domain.cpp'),
+         make.Compile( 'source/example/resource/property.cpp'),
+         make.Compile( 'source/example/build/server.cpp'),
+         make.Compile( 'source/example/build/executable.cpp'),
      ])
 
 # Unittest
-LinkUnittest( 'bin/test-casual-configuration',
+make.LinkUnittest( 'bin/test-casual-configuration',
    [
-        Compile( 'unittest/source/test_model.cpp'),
-        Compile( 'unittest/source/test_environment.cpp'),
+        make.Compile( 'unittest/source/test_model.cpp'),
+        make.Compile( 'unittest/source/test_environment.cpp'),
         
-        Compile( 'unittest/source/resource/test_property.cpp'),
-        Compile( 'unittest/source/build/test_server.cpp'),
-        Compile( 'unittest/source/user/test_accumulate.cpp'),
-        Compile( 'unittest/source/user/test_validate.cpp'),
+        make.Compile( 'unittest/source/resource/test_property.cpp'),
+        make.Compile( 'unittest/source/build/test_server.cpp'),
+        make.Compile( 'unittest/source/user/test_accumulate.cpp'),
+        make.Compile( 'unittest/source/user/test_validate.cpp'),
    ],
    [ 
        example_archive, 
@@ -80,9 +84,9 @@ LinkUnittest( 'bin/test-casual-configuration',
    ])  
 
 # Example maker
-LinkExecutable( 'bin/casual-configuration-documentation', 
+make.LinkExecutable( 'bin/casual-configuration-documentation', 
     [ 
-        Compile( 'source/documentation/main.cpp'),
+        make.Compile( 'source/documentation/main.cpp'),
    ],          
    [ 
       example_archive, 
@@ -90,10 +94,10 @@ LinkExecutable( 'bin/casual-configuration-documentation',
       'casual-common'
    ])  
 
-casual_home = os.getenv('CASUAL_HOME')
+
 
 # Install
-Install( install_libs,  casual_home + '/lib')
-Install( 'resources.yaml',  casual_home + '/configuration/example')
+make.Install( install_libs,  dsl.paths().install + '/lib')
+make.Install( 'resources.yaml',  dsl.paths().install + '/configuration/example')
 
 
