--- a/middleware/serviceframework/makefile.cmk
+++ b/middleware/serviceframework/makefile.cmk
@@ -1,29 +1,32 @@
-from casual.make.api import *
+import casual.make.api as make
+import casual.middleware.make.api as dsl
 
 
-IncludePaths([
+make.IncludePaths([
     'include',
     '../common/include',
-    '../xatmi/include'] + 
-    casual_make_optional_include_paths().split()
+    '../xatmi/include']
+    + make.optional_include_paths()
+    + dsl.paths().include.gtest
     )
 	
-LibraryPaths([
+make.LibraryPaths([
     'bin',
-    '../common/bin'] +
-    casual_make_optional_library_paths().split()
+    '../common/bin']
+    + make.optional_library_paths()
+    + dsl.paths().library.gtest
    )
 
 
 install_lib = []
 
-lib_serviceframework = LinkLibrary( 'bin/casual-serviceframework',
+lib_serviceframework = make.LinkLibrary( 'bin/casual-serviceframework',
     [
-        Compile( 'source/service/protocol.cpp'),
-        Compile( 'source/service/protocol/implementation.cpp'),
-        Compile( 'source/service/protocol/describe.cpp'),
-        Compile( 'source/service/call.cpp'),
-        Compile( 'source/log.cpp'),
+        make.Compile( 'source/service/protocol.cpp'),
+        make.Compile( 'source/service/protocol/implementation.cpp'),
+        make.Compile( 'source/service/protocol/describe.cpp'),
+        make.Compile( 'source/service/call.cpp'),
+        make.Compile( 'source/log.cpp'),
         
     ],
     ['casual-common',])
@@ -32,14 +35,14 @@ install_lib.append( lib_serviceframework)
 
 
 # unittest
-LinkUnittest( 'bin/test-casual-serviceframework',
+make.LinkUnittest( 'bin/test-casual-serviceframework',
 	[   
-        Compile( 'unittest/source/service/test_protocol.cpp'),
-        Compile( 'unittest/source/service/protocol/test_describe.cpp'),
+        make.Compile( 'unittest/source/service/test_protocol.cpp'),
+        make.Compile( 'unittest/source/service/protocol/test_describe.cpp'),
     ],
 	[ lib_serviceframework, 'casual-common', 'casual-unittest'])
 
-casual_home = os.getenv('CASUAL_HOME')
 
-Install( install_lib,  casual_home + '/lib')
+
+make.Install( install_lib,  dsl.paths().install + '/lib')
 
